--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.1.10",
     "enzyme-adapter-react-16": "^1.15.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
