--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.1.10",
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint-plugin-flowtype": "^5.7.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "ts-jest": "^26.5.5",
     "web-vitals": "^1.0.1"
   },
@@ -28,11 +32,13 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "enzyme": "^3.11.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.2",
     "prettier": "^2.2.1",
