--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint-plugin-flowtype": "^5.7.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "moxios": "^0.4.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-promise": "^0.6.0",
     "reselect": "^4.0.0",
     "ts-jest": "^26.5.5",
     "web-vitals": "^1.0.1"
@@ -33,6 +36,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-promise": "^0.5.29",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "enzyme": "^3.11.0",
